fix: add vertical spacing between projects on mobile screens

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Source Serif Pro', 'Georgia', serif;
+  font-family: "Source Serif Pro", "Georgia", serif;
 }
 
 header {
@@ -26,7 +26,7 @@ a:hover {
 }
 
 .project-item {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 
 .item-category {
@@ -49,7 +49,7 @@ a:hover {
   font-weight: 300;
 }
 
-@media screen and (max-width: 992px){
+@media screen and (max-width: 992px) {
   .intro {
     font-weight: 600;
     font-size: 2.6em;
@@ -61,7 +61,7 @@ a:hover {
   }
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .intro {
     font-weight: 600;
     font-size: 2.1em;
@@ -72,31 +72,35 @@ a:hover {
   }
 }
 
-@media screen and (max-width: 578px){
+@media screen and (max-width: 578px) {
   .intro {
     font-weight: 600;
     font-size: 1.9em;
     line-height: 1.1em;
   }
-  
+
   #currently {
     font-size: 1.3em !important;
   }
 }
 
-@media screen and (max-width: 450px){
+@media screen and (max-width: 450px) {
   .intro {
     font-weight: 600;
     font-size: 1.6em;
     line-height: 1.1em;
   }
-  
+
   .hello {
     font-size: 1.3em;
   }
-  
+
   #currently {
     font-size: 1.1em !important;
+  }
+
+  .item-image {
+    margin-top: 2em;
   }
 }
 
@@ -106,7 +110,7 @@ a:hover {
 }
 
 .logo {
-  font-family: 'Permanent Marker', cursive;
+  font-family: "Permanent Marker", cursive;
   font-size: 1.4em;
 }
 
@@ -115,11 +119,10 @@ a {
   text-decoration: none;
 }
 
-a:hover 
-{
-   color:#00A0C6; 
-   text-decoration:none; 
-   cursor:pointer;  
+a:hover {
+  color: #00a0c6;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 header {
